tests/ui/extern_fn_abi.stderr
error: explicit ABI on extern function is not supported
 --> $DIR/tests/ui/extern_fn_abi.rs:4:9
  |
4 |         extern "Java" fn f();
  |         ^^^^^^^^^^^^^
